deployments/sample-app/frontend-service/frontend-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-service
    version: v1
  name: frontend-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-service
      version: v1
  template:
    metadata:
      labels:
        app: frontend-service
        version: v1
    spec:
      containers:
        - image: frontend-service:latest
          name: frontend-service
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 0
