deployments/sample-app/frontend-service/frontend-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-service
  name: frontend-service
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: frontend-service
  sessionAffinity: None
  type: ClusterIP
